--- a/exercice3/index.html
+++ b/exercice3/index.html
@@ -16,6 +16,12 @@
         
     </select>
 
+    <img src="" id="icon" alt="meteo" title="meteo" />
+    <div id="temp"></div>
+    <div id="pressure"></div>
+    <div id="humidity"></div>
+    <div id="windspeed"></div>
+
     <script src="jquery.js"></script>
     <script src="script.js"></script>
 </body>
