Update note with api

--- a/exercice6/index.html
+++ b/exercice6/index.html
@@ -16,10 +16,16 @@
 
     <div id="add"> + </div>
 
-    <form>
+    <form id="create">
         <input type="text" id="title" placeholder="Titre"><br>
         <textarea id="content" placeholder="Contenu"></textarea><br>
         <input type="submit" value="valider">
+    </form>
+
+    <form id="detail">
+        <input type="text" id="title_detail" placeholder="Titre"><br>
+        <textarea id="content_detail" placeholder="Contenu"></textarea><br>
+        <input type="submit" value="Mettre à jour">
     </form>
     
     <script src="jquery.js"></script>
